<resources>
    <string name="app_name">LMSApp</string>
    <string name="tuteme">TuteMe</string>
    <string name="interactive_student_learning">Learning Management System</string>
    <string name="specially_designed_to_manage_small_groups_of_students_for_effective_learning">Specially designed to manage small groups of students for effective learning.</string>
    <string name="start_here">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="courses">Courses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="all_courses">All Courses</string>
    <string name="my_courses">My Courses</string>
    <string name="already_a_member">I am already a member</string>
    <string name="scan">Scan</string>
</resources>